methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:18: error: type mismatch;
 found   : Unit
 required: Boolean
  while (haveBaggle==false){
  ^